<resources>
    <string name="app_name">Hikost</string>
    <string name="dashboard">Dashboard</string>
    <string name="budgeting">Budgeting</string>
    <string name="savings">Savings</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tagline">Right Cost in yout Kost</string>
    <string name="app_logo">app_logo</string>
    <string name="dev_logo">dev_logo</string>

    <!--    month dropdown-->
    <string-array name="languages">
        <item>JAN</item>
        <item>FEB</item>
        <item>MAR</item>
        <item>APR</item>
        <item>MAY</item>
        <item>JUNE</item>
        <item>JUL</item>
        <item>AUG</item>
        <item>SEP</item>
        <item>OCT</item>
        <item>NOV</item>
        <item>DEC</item>
    </string-array>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <string-array name="transaction_category">
        <item>Financial Income</item>
        <item>Food &amp; Drinks</item>
        <item>Shopping</item>
        <item>Housing</item>
        <item>Transportation</item>
        <item>Vehicle</item>
        <item>Leisure</item>
        <item>Life &amp; Entertainment</item>
        <item>Investments</item>
    </string-array>

    <string name="title_activity_nav_bar">NavBar</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="balance">Balance</string>
    <string name="dummy_price">0</string>
    <string name="summary">Summary</string>
    <string name="expenses_details">Expenses Details</string>
    <string name="last_records">Last Records</string>
    <string name="desc_dashboard">Enter your kost dashboard</string>
    <string name="what_does_the_mascot_say">You spent too much this month!</string>
    <string name="expenses">Expenses</string>
    <string name="show_more">Show more</string>
    <string name="dummy_records_title">Dummy Records Title</string>
    <string name="dummy_payment_type">Dummy Payment Type</string>
    <string name="dummy_date">Dummy Date</string>
    <string name="enter_your_kost_account">Enter your kost Account</string>
    <string name="enter_your_kost_savings">Enter your kost Savings</string>
    <string name="enter_your_kost_budgeting">Enter your kost Budgeting</string>
    <string name="enter_your_kost_transaction">Enter your kost Transaction</string>
    <string name="budgets">Budgets</string>
    <string name="all_budgets">All Budgets</string>
    <string name="add_budget">Add Budget</string>
    <string name="special_budgets">Special Budgets</string>
    <string name="special_savings">Special Savings</string>
    <string name="all_savings">All Savings</string>
    <string name="profile">Profile</string>
    <string name="dummy_username">Dummy Username</string>
    <string name="dummy_name">Dummy Name</string>
    <string name="change_profile">Change profile</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="budget_title">Budget Title</string>
    <string name="budget_description">Budget Description</string>
    <string name="budget">Budget</string>
    <string name="idr">Rp</string>

    <string name="activity_add_title">Add %1$s</string>
    <string name="title_label">%1$s Title</string>
    <string name="title_label_error">Please input %1$s title!</string>
    <string name="description_label">%1$s Description</string>
    <string name="category_label">%1$s Category</string>
    <string name="value_label">Your %1$s</string>
    <string name="value_label_target">Your %1$s Target</string>
    <string name="value_label_error">Please input %1$s value!</string>
    <string name="value_label_second_error">Please input %1$s target value!</string>
    <string name="submit_label">Add %1$s</string>
    <string name="date_label">%1$s Date</string>
    <string name="positive_value">+%1$s</string>
    <string name="negative_value">-%1$s</string>


    <string name="add_savings">Add Savings</string>
    <string name="dummy_activity_title">Dummy Activity Title</string>
    <string name="title_title">Title Title</string>
    <string name="value_title">Value Title</string>
    <string name="type_of_transaction">Type of Transaction</string>
    <string name="submit_activity">Submit Activity</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="payment_type">Payment Type</string>
    <string name="lunch_ayam_geprek">Lunch Ayam Geprek</string>
    <string name="uang_jajan">Uang Jajan From Mom</string>
    <string name="category">Category</string>
    <string name="incomes">Incomes</string>
</resources>