<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.hikost.ui.home.HomeFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_budgeting"
        android:name="com.example.hikost.ui.dashboard.DashboardFragment"
        android:label="@string/budgeting"
        tools:layout="@layout/fragment_budgeting" />

    <fragment
        android:id="@+id/navigation_savings"
        android:name="com.example.hikost.ui.savings.SavingsFragment"
        android:label="@string/savings"
        tools:layout="@layout/fragment_savings" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.hikost.ui.savings.SavingsFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />
</navigation>