<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Budgeting">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="@dimen/margin_general"
            android:padding="@dimen/padding_balance"
            android:background="@drawable/shape_balance"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/budgets"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="@dimen/sz_very_large"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_price"
                android:fontFamily="@font/montserrat_bold"
                android:textAlignment="textEnd"
                android:layout_weight="1"
                android:textSize="@dimen/sz_very_large"
                />
        </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_general"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/all_budgets"
                android:textColor="@color/primary"
                android:textSize="@dimen/sz_large" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/margin_general"
                android:background="@drawable/shape_mascot"
                android:elevation="@dimen/recycler_depth"
                android:padding="@dimen/padding_recycler"
                >

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/budgeting_allrecyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_mascot"
                    tools:itemCount="2"
                    tools:listitem="@layout/activity_component_card_all_budgets" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_budget"
                    android:textAlignment="textEnd"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textSize="@dimen/sz_read"
                    android:textColor="@color/primary"
                    android:padding="@dimen/padding_recycler"
                    android:layout_marginHorizontal="@dimen/padding_recycler"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="intoAddBudget"
                    android:minHeight="@dimen/min_height"
                    />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_general"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/special_budgets"
                android:textColor="@color/primary"
                android:textSize="@dimen/sz_large" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/margin_general"
                android:background="@drawable/shape_mascot"
                android:elevation="@dimen/recycler_depth"
                android:padding="@dimen/padding_recycler"
                >

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_mascot"
                    tools:itemCount="2"
                    tools:listitem="@layout/activity_component_card_all_budgets" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_budget"
                    android:textAlignment="textEnd"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textSize="@dimen/sz_read"
                    android:textColor="@color/primary"
                    android:padding="@dimen/padding_recycler"
                    android:layout_marginHorizontal="@dimen/padding_recycler"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="intoAddBudget"
                    android:minHeight="@dimen/min_height"
                    />
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:baselineAligned="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/app_bar_pad"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="@dimen/min_height"
            android:onClick="intoDashboard"
            >

            <ImageView
                android:id="@+id/ic_graph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_graph"
                android:adjustViewBounds="true"
                android:maxWidth="@dimen/ic_size"
                android:minWidth="@dimen/ic_size"
                android:scaleType="fitCenter"
                android:padding="@dimen/ic_pad"
                android:clickable="true"
                android:focusable="true"
                android:onClick="intoDashboard"
                android:contentDescription="@string/desc_dashboard"
                />

            <TextView
                android:id="@+id/txt_graph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dashboard"
                android:fontFamily="@font/montserrat_semibold"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="intoDashboard"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:onClick="intoBudgeting"
            android:minHeight="@dimen/min_height"
            >

            <ImageView
                android:id="@+id/ic_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_filter_active"
                android:adjustViewBounds="true"
                android:maxWidth="@dimen/ic_size"
                android:minWidth="@dimen/ic_size"
                android:scaleType="fitCenter"
                android:padding="@dimen/ic_pad"
                android:contentDescription="@string/enter_your_kost_budgeting"
                android:focusable="true"
                android:clickable="true"
                android:onClick="intoBudgeting"
                />

            <TextView
                android:id="@+id/txt_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/budgeting"
                android:fontFamily="@font/montserrat_semibold"
                android:textColor="@color/primary_dark"
                android:textSize="11sp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="intoBudgeting"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:onClick="intoSavings"
            android:minHeight="@dimen/min_height"
            >

            <ImageView
                android:id="@+id/ic_wallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_wallet"
                android:adjustViewBounds="true"
                android:maxWidth="@dimen/ic_size"
                android:minWidth="@dimen/ic_size"
                android:scaleType="fitCenter"
                android:padding="@dimen/ic_pad"
                android:contentDescription="@string/enter_your_kost_savings"
                android:clickable="true"
                android:focusable="true"
                android:onClick="intoSavings"
                />

            <TextView
                android:id="@+id/txt_wallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/savings"
                android:fontFamily="@font/montserrat_semibold"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="intoSavings"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:onClick="intoAccount"
            >

            <ImageView
                android:id="@+id/ic_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_account"
                android:adjustViewBounds="true"
                android:maxWidth="@dimen/ic_size"
                android:minWidth="@dimen/ic_size"
                android:scaleType="fitCenter"
                android:padding="@dimen/ic_pad"
                android:contentDescription="@string/enter_your_kost_account"
                android:clickable="true"
                android:focusable="true"
                android:onClick="intoAccount"
                />

            <TextView
                android:id="@+id/txt_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:fontFamily="@font/montserrat_semibold"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="intoAccount"
                />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>